@@ -1,27 +1,18 @@
+import java.io.IOException;
+
 public class JsRacer{
 	public static void main(String[]args){
 		System.out.println("HAHHAHAH");
-		ClearScreen();
+		try{
+			ClearScreen();
+		}
+		catch(Exception e){
+			e.printStackTrace();
+		}
+		
 	}
 
-	public static void ClearScreen(){
-		try
-		{
-			final String os = System.getProperty("os.name");
-	
-			if (os.contains("Windows"))
-			{
-				Runtime.getRuntime().exec("cls");
-			}
-			else
-			{
-				Runtime.getRuntime().exec("clear");
-			}
-		}
-		catch (final Exception e)
-		{
-			e.printStackTrace();
-			System.out.println("Error Happened"); 
-		}
+	public static void ClearScreen() throws IOException, InterruptedException {
+		new ProcessBuilder("cmd", "/c", "cls").inheritIO().start().waitFor();
 	}
 }
